исправлено удаление вершины